tenzir/functional-test/data/reference/pipelines_local/test_operator_parsing/step_03.ref
error: the file `a/b/c.json` does not exist
 --> <input>:1:6
  |
1 | from a/b/c.json read json
  |      ^^^^^^^^^^ 
  |